changed warnings and changed app name

--- a/TodoList/AndroidManifest.xml
+++ b/TodoList/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.rjynndee.todolist"
+    package="com.rjynndee.rdejesusnotes"
     android:versionCode="1"
     android:versionName="1.0" >
 
@@ -14,7 +14,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name=".MainActivity"
+            android:name="com.rjynndee.todolist.MainActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -23,11 +23,11 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".ListToDosActivity"
+            android:name="com.rjynndee.todolist.ListToDosActivity"
             android:label="@string/title_activity_list_to_dos" >
         </activity>
         <activity
-            android:name=".SelectMultipleActivity"
+            android:name="com.rjynndee.todolist.SelectMultipleActivity"
             android:label="@string/title_activity_select_multiple" >
         </activity>
     </application>
